test/expect_ident_empty.ref
Error: File "expect_ident_empty.cppo", line 4, characters 6-6
Error: The name of a macro is expected in this position
